features section updated

--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
     </section>
 
     <!-- MAIN SECTION -->
-    <main class="w-full px-[200px]">
+    <main class="w-full">
       <!-- ABOUT SECTION -->
-      <section class="py-12 gap-20 flex flex-col justify-between items-center">
+      <section
+        class="pt-12 pb-[120px] gap-20 px-[200px] flex flex-col justify-between items-center"
+      >
         <div>
           <h2 class="text-center text-5xl font-bold mb-5">About the Podcast</h2>
           <div class="flex items-center justify-between flex-col">
@@ -99,7 +101,7 @@
         </div>
         <hr class="border-gray-700 w-full" />
         <div class="flex items-center justify-around gap-20">
-          <div class="border">
+          <div>
             <h3
               class="text-5xl font-black text-green-600 pb-5 px-16 text-center"
             >
@@ -135,7 +137,89 @@
       </section>
 
       <!-- FEATURES SECTION -->
-      <section></section>
+      <section class="bg-[#230E3D] w-full py-[120px] px-[200px]">
+        <h2 class="text-center font-bold text-5xl mb-10">Why Chose TechWave</h2>
+
+        <div class="grid-cols-3 grid-rows-3 grid gap-[30px]">
+          <div
+            class="row-span-2 col-span-1 p-10 rounded-[40px] bg-[#35116562] flex items-start justify-center gap-2.5 flex-col"
+          >
+            <img
+              src="./assets/headphone.png"
+              class="max-h-[60px] max-w-[60px]"
+              alt="image"
+              srcset=""
+            />
+            <h4 class="text-2xl font-bold">Premium Audio Quality</h4>
+            <p class="text-base leading-6">
+              Experience crystal-clear sound with professional-grade recording
+              equipment and expert audio engineering. Every episode is mastered
+              for optimal listening across all devices and platforms.
+            </p>
+          </div>
+          <div
+            class="col-span-2 row-span-1 p-10 rounded-[40px] bg-[#35116562] flex items-start justify-center gap-2.5 flex-col"
+          >
+            <img
+              src="./assets/device.png"
+              class="max-h-[60px] max-w-[60px]"
+              alt="image"
+              srcset=""
+            />
+            <h4 class="text-2xl font-bold">Mobile Friendly</h4>
+            <p class="text-base leading-6">
+              Listen on the go with seamless mobile experience and offline
+              downloads.
+            </p>
+          </div>
+          <div
+            class="col-span-2 row-span-1 p-10 rounded-[40px] bg-[#35116562] flex items-start justify-center gap-2.5 flex-col"
+          >
+            <img
+              src="./assets/location.png"
+              class="max-h-[60px] max-w-[60px]"
+              alt="image"
+              srcset=""
+            />
+            <h4 class="text-2xl font-bold">Global Community</h4>
+            <p class="text-base leading-6">
+              Connect with tech enthusiasts from over 120 countries worldwide.
+            </p>
+          </div>
+          <div
+            class="col-span-2 row-span-1 p-10 rounded-[40px] bg-[#35116562] flex items-start justify-center gap-2.5 flex-col"
+          >
+            <img
+              src="./assets/exclusiveIcon.png"
+              class="max-h-[60px] max-w-[60px]"
+              alt="image"
+              srcset=""
+            />
+            <h4 class="text-2xl font-bold">Exclusive Interviews</h4>
+            <p class="text-base leading-6">
+              Get unprecedented access to industry titans, startup founders, and
+              tech visionaries. Our host secures exclusive conversations you
+              won't find anywhere else, diving deep into their journeys,
+              failures, and success strategies.
+            </p>
+          </div>
+          <div
+            class="row-span-1 col-span-1 p-10 rounded-[40px] bg-[#35116562] flex items-start justify-center gap-2.5 flex-col"
+          >
+            <img
+              src="./assets/resource.png"
+              class="max-h-[60px] max-w-[60px]"
+              alt="image"
+              srcset=""
+            />
+            <h4 class="text-2xl font-bold">Rich Resources</h4>
+            <p class="text-base leading-6">
+              Access show notes, transcripts, and additional learning materials
+              for every episode.
+            </p>
+          </div>
+        </div>
+      </section>
       <!-- EPISODES SECTION -->
       <section></section>
       <!-- HOST SECTION -->
