host section complete

--- a/index.html
+++ b/index.html
@@ -220,10 +220,65 @@
           </div>
         </div>
       </section>
+
       <!-- EPISODES SECTION -->
-      <section></section>
+      <section class="w-full py-[120px] px-[200px]"></section>
+
       <!-- HOST SECTION -->
-      <section></section>
+      <section class="w-full pb-[120px] px-[200px] pt-0">
+        <h2 class="font-bold text-5xl text-center capitalize mb-10">
+          meet the host
+        </h2>
+        <div
+          class="bg-[#35116562] p-10 rounded-[40px] flex items-center justify-between gap-6"
+        >
+          <img
+            src="./assets//host.png"
+            alt="image"
+            srcset=""
+            class="max-w-52 border-2 border-white rounded-full"
+          />
+          <div class="flex flex-col items-start justify-between gap-4">
+            <h3 class="text-3xl font-bold capitalize text-left">alex kumer</h3>
+            <p class="leading-6">
+              Tech entrepreneur, productivity expert, and lifelong learner. Alex
+              has been in the tech industry for over 10 years, working with
+              startups and Fortune 500 companies. Through TechWave, Alex shares
+              insights from industry leaders and practical advice for anyone
+              looking to grow in tech.
+            </p>
+            <div class="flex gap-2 items-start justify-center">
+              <div class="w-10 p-2.5 border-2 border-[#7650a7] rounded-full">
+                <img
+                  src="./assets/linkedin.png"
+                  alt="image"
+                  srcset=""
+                  class="w-full"
+                />
+              </div>
+              <div class="w-10 p-2.5 border-2 border-[#7650a7] rounded-full">
+                <img src="./assets/x.png" alt="image" srcset="" class="w-10" />
+              </div>
+              <div class="w-10 p-2.5 border-2 border-[#7650a7] rounded-full">
+                <img
+                  src="./assets/instagram.png"
+                  alt="image"
+                  srcset=""
+                  class="w-10"
+                />
+              </div>
+              <div class="w-10 p-2.5 border-2 border-[#7650a7] rounded-full">
+                <img
+                  src="./assets/youtube.png"
+                  alt="image"
+                  srcset=""
+                  class="w-10"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- FOOTER SECTION -->
