episode section and footer section complete

--- a/index.html
+++ b/index.html
@@ -222,7 +222,115 @@
       </section>
 
       <!-- EPISODES SECTION -->
-      <section class="w-full py-[120px] px-[200px]"></section>
+      <section class="w-full py-[120px] px-[200px]">
+        <h2 class="font-bold text-5xl text-center capitalize mb-10">
+          Featured Episodes
+        </h2>
+        <div class="flex items-center justify-between gap-6">
+          <div class="bg-[#35116562] rounded-2xl">
+            <iframe
+              class="w-full max-h-56 rounded-t-2xl"
+              src="https://www.youtube.com/embed/muBBYZXYgoM?si=dIYztfGo0lNTIWnJ"
+              title="YouTube video player"
+              frameborder="0"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+                web-share;
+              "
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            >
+            </iframe>
+            <div class="flex items-start justify-evenly flex-col gap-3 p-6">
+              <h3 class="text-2xl font-bold">
+                The Future of AI in Everyday Life
+              </h3>
+              <p>
+                Exploring how artificial intelligence is transforming our daily
+                routines and what to expect in the next decade.
+              </p>
+              <div class="flex items-center justify-center gap-2.5">
+                <img src="./assets/clock.png" alt="" srcset="" />
+                <p class="text-green-500">1:32 min</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="bg-[#35116562] rounded-2xl">
+            <iframe
+              class="w-full max-h-56 rounded-t-2xl"
+              src="https://www.youtube.com/embed/FfQUHfjB7e8?si=Uz6t10wlIzNaT8Bc"
+              title="YouTube video player"
+              frameborder="0"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+                web-share;
+              "
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+            <div class="flex items-start justify-evenly flex-col gap-3 p-6">
+              <h3 class="text-2xl font-bold">
+                Building Better Habits for Remote Work
+              </h3>
+              <p>
+                Practical strategies for staying productive and maintaining
+                work-life balance in a remote environment.
+              </p>
+              <div class="flex items-center justify-center gap-2.5">
+                <img src="./assets/clock.png" alt="" srcset="" />
+                <p class="text-green-500">1:32 min</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="bg-[#35116562] rounded-2xl">
+            <iframe
+              class="w-full max-h-56 rounded-t-2xl"
+              src="https://www.youtube.com/embed/faxoBJdsfMc?si=Tj79IdIGUHO3CKhK"
+              title="YouTube video player"
+              frameborder="0"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+                web-share;
+              "
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+
+            <div
+              class="rounded-2xl flex items-start justify-evenly flex-col gap-3 p-6"
+            >
+              <h3 class="text-2xl font-bold">
+                Career Growth in Tech: A Roadmap
+              </h3>
+              <p>
+                Expert advice on navigating your tech career from junior
+                developer to senior leadership roles.
+              </p>
+              <div class="flex items-center justify-center gap-2.5">
+                <img src="./assets/clock.png" alt="" srcset="" />
+                <p class="text-green-500">1:10 min</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- HOST SECTION -->
       <section class="w-full pb-[120px] px-[200px] pt-0">
@@ -282,6 +390,22 @@
     </main>
 
     <!-- FOOTER SECTION -->
-    <footer class="h-52 border"></footer>
+    <footer
+      class="bg-[url(./assets/footer-bg.png)] flex items-center gap-8 justify-around flex-col py-[120px]"
+    >
+      <h1 class="font-bold text-6xl text-center">
+        Tech<span
+          class="bg-linear-to-bl from-violet-600 from-30% to-yellow-300 to-95% via-pink-600 via-60% bg-clip-text text-transparent"
+          >Wave</span
+        >
+      </h1>
+      <div class="flex items-center justify-around gap-10 max-w-fit">
+        <div><i class="fa-brands fa-spotify"></i> Spotify</div>
+        <div><i class="fa-solid fa-podcast"></i> Apple Podcast</div>
+        <div><i class="fa-brands fa-youtube"></i> YouTube</div>
+        <div><i class="fa-brands fa-x-twitter"></i> Twitter</div>
+      </div>
+      <p>&copy; 2026 TechWave Podcast. All rights reserved.</p>
+    </footer>
   </body>
 </html>
