--- a/index.html
+++ b/index.html
@@ -10,22 +10,49 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {},
+          },
+        },
+      };
+    </script>
   </head>
   <body class="bg-[#1A0B2E] text-white border-b border-b-gray-700">
     <!-- HEADER SECTION  -->
     <header
       class="px-[12.5%] py-6 max-w-[1600px] flex items-center justify-around border-b border-gray-700"
     >
-      <h1 class="font-bold text-5xl">
+      <h1 class="font-bold text-5xl textdan">
         Tech<span
           class="bg-linear-to-bl from-violet-600 from-30% to-yellow-300 to-95% via-pink-600 via-60% bg-clip-text text-transparent"
           >Wave</span
         >
       </h1>
       <ul class="flex items-center justify-around gap-8">
-        <li><a href="#" class="font-medium">About</a></li>
-        <li><a href="#" class="font-medium">Episodes</a></li>
-        <li><a href="#" class="font-medium">Host</a></li>
+        <li>
+          <a
+            href="#"
+            class="font-mediumb transition duration-500 hover:border-b hover:text-lg pb-0.5"
+            >About</a
+          >
+        </li>
+        <li>
+          <a
+            href="#"
+            class="font-medium hover:border-b transition duration-500 hover:text-lg pb-0.5"
+            >Episodes</a
+          >
+        </li>
+        <li>
+          <a
+            href="#"
+            class="font-medium hover:border-b hover:text-lg pb-0.5 transition duration-500"
+            >Host</a
+          >
+        </li>
       </ul>
       <button
         type="button"
@@ -39,7 +66,13 @@
     <section
       class="bg-[url(./assets/hero-bg.png)] py-[100px] flex items-center justify-around flex-col gap-10"
     >
+      <!-- Part one  -->
       <div class="flex items-center justify-center relative">
+        <p
+          class="absolute top-3 right-5 text-lg font-semibold rounded-4xl bg-green-500 text-black py-2 px-4 text-center drop-shadow-xl/50 drop-shadow-green-500"
+        >
+          NEW
+        </p>
         <img
           src="./assets/hero-circle.png"
           alt="image"
@@ -53,6 +86,7 @@
           class="absolute bottom-20"
         />
       </div>
+      <!-- Part two -->
       <div class="flex items-center justify-around flex-col gap-8">
         <h2 class="text-6xl font-extrabold text-center">TechWave</h2>
         <p class="text-base">
@@ -63,7 +97,7 @@
           <button
             class="bg-linear-to-bl from-violet-600 from-20% to-yellow-300 to-90% via-pink-600 via-50% text-white font-semibold text-base text-center capitalize rounded-full py-3 px-4"
           >
-            <i class="fa-brands fa-spotify text-2xl"></i>
+            <i class="fa-brands fa-spotify text-2xl animate-bounce"></i>
             listen to spotify
           </button>
           <button
